--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,6 +16,9 @@ main:
   - name: Publications
     url: '#featured'
     weight: 30
+  - name: Prospective Students
+    url: '#prospective'
+    weight: 50
 
 
 # Link to a PDF of your resume/CV from the menu.
