--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -24,7 +24,7 @@ module:
   imports:
     - path: github.com/wowchemy/wowchemy-hugo-modules/wowchemy-cms
     - path: github.com/wowchemy/wowchemy-hugo-modules/wowchemy
-    - path: github.com/jb80/wowchemy-widget-twfeed
+    - path: github.com/jb80/twfeed
 
 ############################
 ## ADVANCED
