--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,15 +7,21 @@ main:
   - name: Home
     url: '#about'
     weight: 10
+  - name: Recent Work
+    url: '#recentWork'
+    weight: 15
   - name: Projects
     url: '#projects'
     weight: 20
   - name: Talks
     url: '#talks'
     weight: 40
-  - name: Publications
+  - name: Featured Work
     url: '#featured'
     weight: 30
+  - name: Teaching
+    url: '#teaching'
+    weight: 40
   - name: Prospective Students
     url: '#prospective'
     weight: 50
